--- a/style.css
+++ b/style.css
@@ -38,9 +38,32 @@ footer {
     width: 100%;
     text-align: center;
     font-size: 1em;
-}
+  }
 
-.last-update {
+  .last-update {
     font-size: 0.8em;
     margin-top: 5px;
-}
+  }
+  .back-to-top {
+    position:0;
+    bottom:0;
+    left: 20px;
+    width: 50px;
+    height: 50px;
+    background-color: #90ee90; /* Light green */
+    clip-path: polygon(50% 0%, 100% 25%, 100% 75%, 50% 100%, 0% 75%, 0% 25%);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #181616;
+    text-decoration: none;
+    font-size: 12px;
+    font-weight: bold;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
+    transition: transform 0.3s, background-color 0.3s;
+  }
+
+  .back-to-top:hover {
+    background-color: #76c776; /* Darker green on hover */
+    transform: scale(1.1); /* Slightly enlarge on hover */
+  }
