--- a/style.css
+++ b/style.css
@@ -67,3 +67,29 @@ footer {
     background-color: #76c776; /* Darker green on hover */
     transform: scale(1.1); /* Slightly enlarge on hover */
   }
+  .clock-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 60px;
+    height: 55px;
+    background-color: brown;
+    border: 2px solid lightblue;
+    color: white;
+    position: fixed;
+    top: 50%;
+    left: 0;
+    transform: translateY(-50%);
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+}
+
+.time {
+    font-size: 10px;
+    font-weight: bold;
+}
+
+.date {
+    font-size: 10px;
+}
+
